--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,48 @@
 @tailwind components;
 @tailwind utilities;
 
+/* QuickSand */
+@font-face {
+  font-family: "QuickSand";
+  src: url("assets/fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
+}
+
+/* Nunito*/
+@font-face {
+  font-family: "NunitoSans";
+  src: url("assets/fonts/Nunito_Sans/NunitoSans-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NunitoSans";
+  src: url("assets/fonts/Nunito_Sans/NunitoSans-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NunitoSans";
+  src: url("assets/fonts/Nunito_Sans/NunitoSans-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "NunitoSans";
+  src: url("assets/fonts/Nunito_Sans/NunitoSans-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+/* End of nunito*/
+
 html,
 body,
 #root,
 .app {
   height: 100%;
   width: 100%;
-  font-family: "DM Sans", sans-serif;
+  /*font-family: "DM Sans", sans-serif;*/
 }
